# EPLTippingCompetition

./: LICENSE  README.md  SECURITY.md  pyproject.toml
deploy/: epl-tipping.env.example  install-systemd.sh
designs/: epl-tipping-ui.pen
docs/: ARCHITECTURE.md  DEPLOYMENT.md
epl_tipping/: __init__.py  cron.py  football_data.py  main.py  models.py  runner.py  scoring.py  simulation.py  storage.py
epl_tipping/static/: app.js  styles.css  theme-init.js
epl_tipping/static/css/: base.css  components.css  pages.css  responsive.css  tables.css  tokens.css
epl_tipping/templates/: admin.html  api_test.html  base.html  contestant.html  fixture.html  leaderboard.html  projection.html  schedule.html  simulation.html  tips.html  today.html
epl_tipping/templates/components/: fixtures.html  predictions.html  ui.html
examples/fixed_fastapi_server/: README.md  server.py
examples/random_fastapi_server/: README.md  server.py
tests/: conftest.py  test_dev_simulation_worker.py  test_football_data.py  test_models.py  test_routes.py  test_runner.py  test_scoring.py  test_simulation.py
world_cup_tipping/: cron.py  main.py  runner.py  scoring.py
world_cup_tipping/static/: app.js  styles.css
world_cup_tipping/templates/: base.html  schedule.html
