[project]
name = "epl-tipping"
version = "0.1.0"
description = "English Premier League prediction-bot tipping competition powered by football-data.org."
requires-python = ">=3.12"
dependencies = [
  "cryptography>=48.0.0",
  "fastapi",
  "httpx",
  "jinja2",
  "python-dotenv",
  "python-multipart",
  "uvicorn[standard]",
]

[dependency-groups]
dev = [
  "pytest",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
pythonpath = [
  ".",
]
